syntax = "proto3";

package pb;



//The Hello service definition.
service Hello {
 rpc HelloWorld (HelloWorldRequest) returns (HelloWorldReply);
}

message HelloWorldRequest {
 string s = 1;
}

message HelloWorldReply {
 string rs  = 1;
 string err = 2;
}

